update changes to fix import errors from restruc

--- a/Density_Map.ipynb
+++ b/Density_Map.ipynb
@@ -9,20 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Analysis_functions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatabases\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtrajectory_analysis_script\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minterpolate\u001b[39;00m \u001b[39mimport\u001b[39;00m griddata\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/src/databases/trajectory_analysis_script.py:14\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mblob_detection\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mConvert_csv_mat\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m---> 14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mplotting_functions\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mrun_analysis\u001b[39;00m:\n\u001b[1;32m     18\u001b[0m \t\u001b[39m'''\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39m\tDefine a class for each dataset to analyse\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39m\tContains multiple frames of view for movies\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     51\u001b[0m \n\u001b[1;32m     52\u001b[0m \u001b[39m\t'''\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/src/helpers/plotting_functions.py:8\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmpl_toolkits\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmplot3d\u001b[39;00m \u001b[39mimport\u001b[39;00m Axes3D\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39manimation\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39manimation\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mAnalysis_functions\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimport_functions\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpatches\u001b[39;00m \u001b[39mimport\u001b[39;00m Circle\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Analysis_functions'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/_t/qlzp5l894v16vmr8m_81x5x80000gn/T/ipykernel_23859/2041621871.py:28: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "  set_matplotlib_formats('svg')\n"
      ]
     }
    ],
@@ -55,12 +50,12 @@
     "%matplotlib inline\n",
     "from IPython.display import set_matplotlib_formats\n",
     "set_matplotlib_formats('svg')\n",
-    "import src.helpers.foci_detection.simulate_foci\n",
+    "import src.helpers.foci_detection.simulate_foci as simulate_foci\n",
     "from sklearn.cluster import DBSCAN\n",
     "from cgitb import small\n",
-    "import src.helpers.smallestenclosingcircle\n",
+    "import src.helpers.smallestenclosingcircle as smallestenclosingcircle\n",
     "import math\n",
-    "import src.helpers.guassian_fit"
+    "import src.helpers.guassian_fit as gaussian_fit"
    ]
   },
   {
@@ -307,11 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '..DATA/new_days/20190527/rpoc_ez/gfp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rp_ez\u001b[39m.\u001b[39mread_parameters(minimum_percent_per_drop_in \u001b[39m=\u001b[39m \u001b[39m0.9\u001b[39m, t_len_u \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m, t_len_l\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, minimum_tracks_per_drop \u001b[39m=\u001b[39m \u001b[39m3\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m rp_ez\u001b[39m.\u001b[39mget_blob_parameters(threshold \u001b[39m=\u001b[39m \u001b[39m1e-4\u001b[39m,overlap\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m,detection_name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbp\u001b[39m\u001b[39m'\u001b[39m,min_sigma\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\u001b[39m/\u001b[39mnp\u001b[39m.\u001b[39msqrt(\u001b[39m2\u001b[39m), \\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m                             max_sigma\u001b[39m=\u001b[39m\u001b[39m3.\u001b[39m\u001b[39m/\u001b[39mnp\u001b[39m.\u001b[39msqrt(\u001b[39m2\u001b[39m),num_sigma\u001b[39m=\u001b[39m\u001b[39m500\u001b[39m,median \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/Density_Map.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m rp_ez\u001b[39m.\u001b[39;49mrun_flow()\n",
+      "File \u001b[0;32m~/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/src/databases/trajectory_analysis_script.py:762\u001b[0m, in \u001b[0;36mrun_analysis.run_flow\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    758\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrun_flow\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    759\u001b[0m \t\u001b[39m'''\u001b[39;00m\n\u001b[1;32m    760\u001b[0m \u001b[39m\tControls the flow of this dataset analysis\u001b[39;00m\n\u001b[1;32m    761\u001b[0m \u001b[39m\t'''\u001b[39;00m\n\u001b[0;32m--> 762\u001b[0m \ttracks, drops, blobs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_read_track_data(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwd,\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mt_string)\n\u001b[1;32m    763\u001b[0m \t\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtotal_experiments \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(tracks)\n\u001b[1;32m    764\u001b[0m \t\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_analyse_cell_tracks()\n",
+      "File \u001b[0;32m~/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/src/databases/trajectory_analysis_script.py:340\u001b[0m, in \u001b[0;36mrun_analysis._read_track_data\u001b[0;34m(self, wd, t_string, **kwargs)\u001b[0m\n\u001b[1;32m    338\u001b[0m \u001b[39m#use gfp images for nuceloid segmentation\u001b[39;00m\n\u001b[1;32m    339\u001b[0m nucleoid_path \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mnucleoid_path\u001b[39m\u001b[39m\"\u001b[39m,cd \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/gfp\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 340\u001b[0m nucleoid_imgs \u001b[39m=\u001b[39m find_image(nucleoid_path,full_path\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m    341\u001b[0m nucleoid_imgs_sorted \u001b[39m=\u001b[39m sorted_alphanumeric(nucleoid_imgs)\n\u001b[1;32m    343\u001b[0m \u001b[39m#load the data of segmented cells from SuperSegger (cell files)\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/Scripts/src/helpers/import_functions.py:110\u001b[0m, in \u001b[0;36mfind_image\u001b[0;34m(path, ends_with, full_path)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     96\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[1;32m     97\u001b[0m \u001b[39m----------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[39m\tlist of file paths with the root provided in Parameters with contrainsts of ends_with\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    109\u001b[0m file_paths \u001b[39m=\u001b[39m []\n\u001b[0;32m--> 110\u001b[0m \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mlistdir(path):\n\u001b[1;32m    111\u001b[0m \t\u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misfile(f):\n\u001b[1;32m    112\u001b[0m \t\t\u001b[39mif\u001b[39;00m f\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m.tif\u001b[39m\u001b[39m'\u001b[39m):\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '..DATA/new_days/20190527/rpoc_ez/gfp'"
+     ]
+    }
+   ],
    "source": [
-    "rp_ez= run_analysis(\"DATA/new_days/20190527/rpoc_ez\",\"rpoc_ez\")\n",
+    "rp_ez= run_analysis(\"/Users/baljyot/Documents/CODE/GitHub_t2/Baljyot_EXP_RPOC/DATA/new_days/20190527/rpoc_ez\",\"rpoc_ez\")\n",
     "rp_ez.read_parameters(minimum_percent_per_drop_in = 0.9, t_len_u = 100, t_len_l=10, minimum_tracks_per_drop = 3)\n",
     "rp_ez.get_blob_parameters(threshold = 1e-4,overlap=0.5,detection_name='bp',min_sigma=1/np.sqrt(2), \\\n",
     "                            max_sigma=3./np.sqrt(2),num_sigma=500,median = False)\n",
