--- a/Two_condensates_Scale_space_detection.ipynb
+++ b/Two_condensates_Scale_space_detection.ipynb
@@ -28,12 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import src.helpers.simulate_foci as simulate_foci\n",
-    "import src.helpers.simulate_cells as simulate_cells\n",
-    "import src.helpers.condensate_movement as condensate_movement\n",
-    "import src.helpers.fbm_utility as fbm_utility\n",
-    "import src.helpers.probability_functions as probability_functions\n",
-    "import src.helpers.blob_detection as blobs\n",
+    "import src.SMT_Analysis_BP.helpers.simulate_foci as simulate_foci\n",
+    "import src.SMT_Analysis_BP.helpers.simulate_cells as simulate_cells\n",
+    "import src.SMT_Analysis_BP.helpers.condensate_movement as condensate_movement\n",
+    "import src.SMT_Analysis_BP.helpers.fbm_utility as fbm_utility\n",
+    "import src.SMT_Analysis_BP.helpers.probability_functions as probability_functions\n",
+    "import src.SMT_Analysis_BP.helpers.blob_detection as blobs\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
