--- a/simulation_Radius_Points.ipynb
+++ b/simulation_Radius_Points.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from src.databases.trajectory_analysis_script import *\n",
+    "from src.SMT_Analysis_BP.databases.trajectory_analysis_script import *\n",
     "from scipy.interpolate import griddata\n",
     "from scipy.stats import norm\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,18 +29,18 @@
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
-    "from src.helpers.plotting_functions import *\n",
-    "from src.helpers.import_functions import *\n",
-    "from src.helpers.Analysis_functions import *\n",
-    "from src.helpers.diff_mw import *\n",
+    "from src.SMT_Analysis_BP.helpers.plotting_functions import *\n",
+    "from src.SMT_Analysis_BP.helpers.import_functions import *\n",
+    "from src.SMT_Analysis_BP.helpers.Analysis_functions import *\n",
+    "from src.SMT_Analysis_BP.helpers.diff_mw import *\n",
     "import mpl_toolkits.mplot3d.art3d as art3d\n",
     "from mpl_toolkits.axes_grid1.inset_locator import zoomed_inset_axes\n",
     "from mpl_toolkits.axes_grid1.inset_locator import mark_inset\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from matplotlib_scalebar.scalebar import ScaleBar\n",
     "import matplotlib as mpl\n",
-    "from src.helpers.scalebars import *\n",
-    "from src.helpers.Convert_csv_mat import *\n",
+    "from src.SMT_Analysis_BP.helpers.scalebars import *\n",
+    "from src.SMT_Analysis_BP.helpers.Convert_csv_mat import *\n",
     "from matplotlib.collections import LineCollection\n",
     "from matplotlib.colors import ListedColormap, BoundaryNorm\n",
     "from scipy import stats, ndimage\n",
@@ -51,12 +51,12 @@
     "set_matplotlib_formats('svg')  \n",
     "from sklearn.cluster import DBSCAN\n",
     "from cgitb import small\n",
-    "import src.helpers.smallestenclosingcircle as smallestenclosingcircle\n",
+    "import src.SMT_Analysis_BP.helpers.smallestenclosingcircle as smallestenclosingcircle\n",
     "import math\n",
-    "import src.helpers.guassian_fit as gaussian_fit\n",
-    "import src.helpers.fbm_utility as fbm_utility\n",
-    "import src.helpers.simulate_foci as simulate_foci\n",
-    "import src.helpers.simulate_cells as simulate_cells\n",
+    "import src.SMT_Analysis_BP.helpers.guassian_fit as gaussian_fit\n",
+    "import src.SMT_Analysis_BP.helpers.fbm_utility as fbm_utility\n",
+    "import src.SMT_Analysis_BP.helpers.simulate_foci as simulate_foci\n",
+    "import src.SMT_Analysis_BP.helpers.simulate_cells as simulate_cells\n",
     "\n",
     "import matplotlib.patches as mpatches\n",
     "import pickle"
